k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-bank-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: user-bank.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-bank-service
                port:
                  number: 80
